# Concurrent_factorization

./: CMakeLists.txt  ConcurrencyThreadTricks.sln  Makefile  README.md  factorization.cpp  nok.cpp  numGen.cpp  settingsHeader.h  source.cpp
ConcurrencyThreadTricks/: ConcurrencyThreadTricks.vcxproj  ConcurrencyThreadTricks.vcxproj.filters  Source.cpp  factorization.cpp  out.txt  settingsHeader.h
ConcurrencyThreadTricks/Debug/: source.obj.enc  vc140.idb
ConcurrencyThreadTricks/Debug/Concurre.9C916C28.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConcurrencyThreadTricks.lastbuildstate
ConcurrencyThreadTricks/x64/Debug/: vc140.idb
ConcurrencyThreadTricks/x64/Debug/Concurre.9C916C28.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConcurrencyThreadTricks.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ConcurrencyThreadTricks/x64/Release/Concurre.9C916C28.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConcurrencyThreadTricks.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: ConcurrencyThreadTricks.ilk
x64/Release/: ConcurrencyThreadTricks.iobj  ConcurrencyThreadTricks.ipdb
